--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -127,6 +127,12 @@
       document.getElementById("second").after(document.getElementById("first")); // take #second and after it insert #first
     </script>
 
+    <div class="alert">
+      <strong>Hi there!</strong> You've read an important message.
+    </div>
+
+    <script></script>
+
     <script src="index2.js"></script>
   </body>
 </html>
