--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -125,6 +125,11 @@
     <script>
       // no need to call remove
       document.getElementById("second").after(document.getElementById("first")); // take #second and after it insert #first
+
+      setTimeout(function () {
+        document.getElementById("first").remove();
+        document.getElementById("second").remove();
+      }, 10000);
     </script>
 
     <div class="alert">
