--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -140,10 +140,10 @@
     </div>
 
     <script>
-      const div2 = document.getElementById("div-1").cloneNode(true);
-      div2.querySelector("strong").innerHTML = "Bye there!";
+      const div2 = document.getElementById("div-1").cloneNode(true); // clone the message
+      div2.querySelector("strong").innerHTML = "Bye there!"; // change the clone
 
-      document.getElementById("div-1").after(div2);
+      document.getElementById("div-1").after(div2); // show the clone after the existing div
     </script>
 
     <script src="index2.js"></script>
