--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -154,6 +154,11 @@
       }, 11000);
     </script>
 
+    <ul id="ul-with-fragment"></ul>
+
+    <script>
+      const ulWithFragment = document.getElementById("ul-with-fragment");
+    </script>
     <script src="index2.js"></script>
   </body>
 </html>
