--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -157,7 +157,6 @@
     <ul id="ul-with-fragment"></ul>
 
     <script>
-      const ulWithFragment = document.getElementById("ul-with-fragment");
       function getListContent() {
         const fragment = new DocumentFragment();
         for (let i = 1; i <= 4; i++) {
@@ -167,6 +166,8 @@
         }
         return fragment;
       }
+
+      document.getElementById("ul-with-fragment").append(getListContent);
     </script>
     <script src="index2.js"></script>
   </body>
