--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -167,7 +167,7 @@
         return fragment;
       }
 
-      document.getElementById("ul-with-fragment").append(getListContent);
+      document.getElementById("ul-with-fragment").append(getListContent());
     </script>
     <script src="index2.js"></script>
   </body>
