--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -175,6 +175,16 @@
         ulWithFragment.remove();
       }, 12000);
     </script>
+
+    <ul id="ul-with-array"></ul>
+
+    <script>
+      function getListContentUsingArray() {
+        const result = [];
+
+        return result;
+      }
+    </script>
     <script src="index2.js"></script>
   </body>
 </html>
