--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -181,7 +181,11 @@
     <script>
       function getListContentUsingArray() {
         const result = [];
-
+        for (let i = 1; i <= 4; i++) {
+          const li = document.createElement("li");
+          li.append(i);
+          result.push(li);
+        }
         return result;
       }
     </script>
