--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -188,6 +188,9 @@
         }
         return result;
       }
+
+      const ulWithArray = document.getElementById("ul-with-array");
+      ulWithArray.append(...getListContentUsingArray());
     </script>
     <script src="index2.js"></script>
   </body>
