--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -196,6 +196,9 @@
         ulWithArray.remove();
       }, 13000);
     </script>
+
+    <ol id="old-school-list"></ol>
+
     <script src="index2.js"></script>
   </body>
 </html>
