--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -197,7 +197,11 @@
       }, 13000);
     </script>
 
-    <ol id="old-school-list"></ol>
+    <ol id="old-school-list">
+      <li>1-</li>
+      <li>2-</li>
+      <li>3-</li>
+    </ol>
 
     <script src="index2.js"></script>
   </body>
