--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -203,6 +203,10 @@
       <li>3-</li>
     </ol>
 
+    <script>
+      const oldSchoolList = document.getElementById("old-school-list");
+    </script>
+
     <script src="index2.js"></script>
   </body>
 </html>
