--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -205,6 +205,7 @@
 
     <script>
       const oldSchoolList = document.getElementById("old-school-list");
+      oldSchoolList.appendChild("ola");
     </script>
 
     <script src="index2.js"></script>
