--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -205,7 +205,10 @@
 
     <script>
       const oldSchoolList = document.getElementById("old-school-list");
-      oldSchoolList.appendChild("ola");
+      const listItem = document.createElement("li");
+      listItem.innerHTML = "Append Child";
+
+      oldSchoolList.appendChild(listItem);
     </script>
 
     <script src="index2.js"></script>
