--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -207,7 +207,7 @@
       const oldSchoolList = document.getElementById("old-school-list");
       const listItem = document.createElement("li");
       listItem.innerHTML = "Append Child";
-      oldSchoolList.appendChild(listItem);
+      const appendChild = oldSchoolList.appendChild(listItem);
     </script>
 
     <script src="index2.js"></script>
