--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -208,6 +208,8 @@
       const listItem = document.createElement("li");
       listItem.innerHTML = "Append Child";
       const appendChild = oldSchoolList.appendChild(listItem);
+
+      // parentElem.insertBefore(node, nextSibling)
     </script>
 
     <script src="index2.js"></script>
