--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -214,7 +214,7 @@
       listItem2.innerHTML = "Insert Before";
       const nextSibling = oldSchoolList.children[1];
 
-      const insertBefore = oldSchoolList.insertBefore(listItem2);
+      const insertBefore = oldSchoolList.insertBefore(listItem2, nextSibling);
     </script>
 
     <script src="index2.js"></script>
