--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -220,7 +220,7 @@
       insertAsFirstElement.innerHTML = "Insert as First Element";
       oldSchoolList.insertBefore(
         insertAsFirstElement,
-        oldSchoolList.firstElementChild
+        oldSchoolList.firstChild
       );
     </script>
 
