--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -222,6 +222,8 @@
         insertAsFirstElement,
         oldSchoolList.firstChild
       );
+
+      // parentElem.replaceChild(node, oldChild)
     </script>
 
     <script src="index2.js"></script>
