--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -224,6 +224,10 @@
       );
 
       // parentElem.replaceChild(node, oldChild)
+      const oldChild = oldSchoolList.children[4];
+      const newNode = document.createElement("li");
+      newNode.innerHTML = "Replaced Child";
+      oldSchoolList.replaceChild(newNode, oldChild);
     </script>
 
     <script src="index2.js"></script>
