--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -227,7 +227,7 @@
       const oldChild = oldSchoolList.children[4];
       const newNode = document.createElement("li");
       newNode.innerHTML = "Replaced Child";
-      oldSchoolList.replaceChild(newNode, oldChild);
+      const replacedNode = oldSchoolList.replaceChild(newNode, oldChild);
     </script>
 
     <script src="index2.js"></script>
