--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -228,8 +228,12 @@
       const newNode = document.createElement("li");
       newNode.innerHTML = "Replaced Child";
       const replacedNode = oldSchoolList.replaceChild(newNode, oldChild);
+
+      // parentElem.removeChild(node)
     </script>
 
     <script src="index2.js"></script>
   </body>
 </html>
+
+<!-- https://mundoeducacao.uol.com.br/fisica/resistores.htm -->
