--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -230,6 +230,9 @@
       const replacedNode = oldSchoolList.replaceChild(newNode, oldChild);
 
       // parentElem.removeChild(node)
+      const removedChild = oldSchoolList.removeChild(
+        oldSchoolList.lastElementChild
+      );
     </script>
 
     <script src="index2.js"></script>
