--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -230,9 +230,7 @@
       const replacedNode = oldSchoolList.replaceChild(newNode, oldChild);
 
       // parentElem.removeChild(node)
-      const removedChild = oldSchoolList.removeChild(
-        oldSchoolList.lastElementChild
-      );
+      const removedChild = oldSchoolList.removeChild(oldSchoolList.lastChild);
     </script>
 
     <script src="index2.js"></script>
