--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -233,6 +233,10 @@
       const removedChild = oldSchoolList.removeChild(
         oldSchoolList.lastElementChild
       );
+
+      setTimeout(function () {
+        oldSchoolList.remove();
+      }, 14000);
     </script>
 
     <script src="index2.js"></script>
