--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -239,6 +239,10 @@
       }, 14000);
     </script>
 
+    <script>
+      document.write("<h4>Hello from JS</p>");
+    </script>
+
     <script src="index2.js"></script>
   </body>
 </html>
