--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -239,9 +239,11 @@
       }, 14000);
     </script>
 
+    <p>Somewhere in the page...</p>
     <script>
       document.write("<h4>Hello from JS</p>");
     </script>
+    <p>The end</p>
 
     <script src="index2.js"></script>
   </body>
