--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -241,7 +241,7 @@
 
     <p>Somewhere in the page...</p>
     <script>
-      document.write("<h4>Hello from JS</p>");
+      document.write("<h4>Hello from JS</h4>");
     </script>
     <p>The end</p>
 
