--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/index2.html
@@ -245,6 +245,12 @@
     </script>
     <p>The end</p>
 
+    <script>
+      setTimeout(function () {
+        document.write("<h4 style='color:red'>...Bye</h4>");
+      }, 15000);
+    </script>
+
     <script src="index2.js"></script>
   </body>
 </html>
