--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-text-node-vs-inner-html-vs-text-content.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-text-node-vs-inner-html-vs-text-content.html
@@ -5,6 +5,7 @@
 
     <script>
       const text = "<h1>Heading</h1>";
+      document.getElementById("elem").append(document.createTextNode(text));
     </script>
   </body>
 </html>
