--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-text-node-vs-inner-html-vs-text-content.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-text-node-vs-inner-html-vs-text-content.html
@@ -5,7 +5,8 @@
 
     <script>
       const text = "<h1>Heading</h1>";
-      document.getElementById("elem").append(document.createTextNode(text));
+      // document.getElementById("elem").append(document.createTextNode(text));
+      document.getElementById("elem").innerHTML = text;
     </script>
   </body>
 </html>
