--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/clear-the-element.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/clear-the-element.html
@@ -5,5 +5,11 @@
       <li>Hello</li>
       <li>World</li>
     </ol>
+
+    <script>
+      function clear(elem) {}
+
+      clear(document.getElementById("elem"));
+    </script>
   </body>
 </html>
