--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/clear-the-element.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/clear-the-element.html
@@ -7,7 +7,9 @@
     </ol>
 
     <script>
-      function clear(elem) {}
+      function clear(elem) {
+        elem.innerHTML = elem.cloneNode(false);
+      }
 
       clear(document.getElementById("elem"));
     </script>
