--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/clear-the-element.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/clear-the-element.html
@@ -8,7 +8,7 @@
 
     <script>
       function clear(elem) {
-        elem.innerHTML = elem.cloneNode(false);
+        elem.outerHTML = elem.cloneNode(false).outerHTML;
       }
 
       clear(document.getElementById("elem"));
