--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/why-does-aaa-remain.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/why-does-aaa-remain.html
@@ -7,5 +7,9 @@
         <td>Test</td>
       </tr>
     </table>
+
+    <script>
+      document.getElementById("table").remove();
+    </script>
   </body>
 </html>
