--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/why-does-aaa-remain.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/why-does-aaa-remain.html
@@ -9,6 +9,8 @@
     </table>
 
     <script>
+      // In the example below, the call table.remove() removes the table from the document.
+      // But if you run it, you can see that the text "aaa" is still visible.
       document.getElementById("table").remove();
     </script>
   </body>
