--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/why-does-aaa-remain.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/why-does-aaa-remain.html
@@ -11,6 +11,7 @@
     <script>
       // In the example below, the call table.remove() removes the table from the document.
       // But if you run it, you can see that the text "aaa" is still visible.
+      // Why does that happen?
       document.getElementById("table").remove();
     </script>
   </body>
