--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-list.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-list.html
@@ -2,7 +2,10 @@
 <html>
   <body>
     <script>
-      const input = prompt("Insert the list item: ");
+      let input = prompt("Insert the list item: ");
+      const listItems = [];
+
+      while (input) {}
     </script>
   </body>
 </html>
