--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-list.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-list.html
@@ -9,6 +9,7 @@
         const li = document.createElement("li");
         li.textContent = text;
         listItems.push(li);
+        text = prompt("Insert the list item: ");
       }
 
       console.log(listItems);
