--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-list.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-list.html
@@ -3,6 +3,7 @@
   <body>
     <script>
       let text = prompt("Insert the list item: ");
+      const ul = document.createElement("ul");
       const listItems = [];
 
       while (text) {
