--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-list.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-list.html
@@ -13,7 +13,7 @@
         text = prompt("Insert the list item: ");
       }
 
-      console.log(listItems);
+      ul.append(...listItems);
     </script>
   </body>
 </html>
