--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-list.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-list.html
@@ -11,9 +11,10 @@
         if (!text) {
           break;
         }
+
         const li = document.createElement("li");
         li.textContent = text;
-        listItems.push(li);
+        ul.append(li);
       }
     </script>
   </body>
