--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object.html
@@ -22,7 +22,8 @@
 
       function print(data) {
         Object.entries(data).forEach(function ([key, value]) {
-          console.log(key);
+          console.log(key, value);
+          print(value);
         });
       }
 
