--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object.html
@@ -20,14 +20,14 @@
         },
       };
 
-      function print(data) {
+      function createTree(data) {
         Object.entries(data).forEach(function ([key, value]) {
           console.log(key, value);
-          print(value);
+          createTree(value);
         });
       }
 
-      print(data);
+      createTree(data);
     </script>
   </body>
 </html>
