--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object.html
@@ -29,15 +29,12 @@
           if (Object.entries(value).length > 0) {
             const ul = document.createElement("ul");
             createTree(ul, value);
-            li.innerHTML = key;
-            li.append(ul);
+            li.append(key, ul);
             container.append(li);
           } else {
             li.innerHTML = key;
             container.append(li);
           }
-          // createTree(value);
-          // console.log(key, value);
         });
       }
 
