--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object.html
@@ -32,7 +32,7 @@
             li.append(key, ul);
             container.append(li);
           } else {
-            li.innerHTML = key;
+            li.append(key);
             container.append(li);
           }
         });
