--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object.html
@@ -21,19 +21,22 @@
 
       const container = document.createElement("ul");
 
-      function createTree(container, data) {
-        Object.entries(data).forEach(function ([key, value]) {
-          const li = document.createElement("li");
-          if (Object.entries(value).length > 0) {
-            const ul = document.createElement("ul");
-            createTree(ul, value);
-            li.append(key, ul);
-            container.append(li);
-          } else {
-            li.append(key);
-            container.append(li);
-          }
+      function createTree(container, obj) {
+        Object.entries(obj).forEach(function ([key, value]) {
+          console.log(key, value);
         });
+        // Object.entries(obj).forEach(function ([key, value]) {
+        //   const li = document.createElement("li");
+        //   if (Object.entries(value).length > 0) {
+        //     const ul = document.createElement("ul");
+        //     createTree(ul, value);
+        //     li.append(key, ul);
+        //     container.append(li);
+        //   } else {
+        //     li.append(key);
+        //     container.append(li);
+        //   }
+        // });
       }
 
       createTree(container, data);
