--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object.html
@@ -14,7 +14,19 @@
           },
           Flowering: {
             "apple tree": {},
-            magnolia: {},
+            magnolia: {
+              a: {
+                b: {
+                  c: {
+                    d: {
+                      e: {
+                        f: {},
+                      },
+                    },
+                  },
+                },
+              },
+            },
           },
         },
       };
@@ -25,10 +37,15 @@
         if (Object.entries(obj).length) {
           Object.entries(obj).forEach(function ([key, value]) {
             const li = document.createElement("li");
-            const ul = document.createElement("ul");
-            li.append(key, ul);
-            container.append(li);
-            createTree(ul, value);
+            if (Object.entries(value).length) {
+              const ul = document.createElement("ul");
+              li.append(key, ul);
+              container.append(li);
+              createTree(ul, value);
+            } else {
+              li.append(key);
+              container.append(li);
+            }
           });
         }
       }
