--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object.html
@@ -33,7 +33,10 @@
 
       const container = document.createElement("ul");
 
-      function createTree(container, obj) {}
+      function createTree(container, obj) {
+        if (Object.entries(obj).length) {
+        }
+      }
 
       // function createTree(container, obj) {
       //   if (Object.entries(obj).length) {
