--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object.html
@@ -35,6 +35,7 @@
 
       function createTree(container, obj) {
         if (Object.entries(obj).length) {
+          console.log("tem");
         }
       }
 
