--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object.html
@@ -34,8 +34,9 @@
       const container = document.createElement("ul");
 
       function createTree(container, obj) {
-        if (Object.entries(obj).length) {
-          console.log("tem");
+        const hasEntries = Object.entries(obj).length;
+
+        if (hasEntries) {
         }
       }
 
