--- a/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object.html
+++ b/part-2-browser-document-events-interfaces/document/modifying-the-document/tasks/create-a-tree-from-the-object.html
@@ -37,6 +37,9 @@
         const hasEntries = Object.entries(obj).length;
 
         if (hasEntries) {
+          Object.entries(obj).forEach(function (value) {
+            console.log(value);
+          });
         }
       }
 
